--- a/CodeRepository/CodeRepository/Base.lproj/LaunchScreen.storyboard
+++ b/CodeRepository/CodeRepository/Base.lproj/LaunchScreen.storyboard
@@ -5,7 +5,7 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,7 +20,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="658-DM-8BT">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="2Lu-rn-EfS" firstAttribute="top" secondItem="658-DM-8BT" secondAttribute="bottom" id="S7o-Yw-nqd"/>
+                            <constraint firstAttribute="trailing" secondItem="658-DM-8BT" secondAttribute="trailing" id="Uo5-gq-LpH"/>
+                            <constraint firstItem="658-DM-8BT" firstAttribute="top" secondItem="6Wo-SC-DFS" secondAttribute="bottom" constant="-20" id="hgf-0T-Zd6"/>
+                            <constraint firstItem="658-DM-8BT" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="rTK-rh-djZ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -28,4 +39,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="1" width="500" height="706"/>
+    </resources>
 </document>
