--- a/CodeRepository/CodeRepository/Base.lproj/LaunchScreen.storyboard
+++ b/CodeRepository/CodeRepository/Base.lproj/LaunchScreen.storyboard
@@ -5,7 +5,7 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -17,29 +17,52 @@
                         <viewControllerLayoutGuide type="top" id="6Wo-SC-DFS"/>
                         <viewControllerLayoutGuide type="bottom" id="2Lu-rn-EfS"/>
                     </layoutGuides>
+                    <string key="storyboardIdentifier" base64-UTF8="YES">
+CQ
+</string>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1" translatesAutoresizingMaskIntoConstraints="NO" id="658-DM-8BT">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launch.png" translatesAutoresizingMaskIntoConstraints="NO" id="IoA-py-PV0">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="草泥马啊" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LtE-Ey-egb">
+                                <rect key="frame" x="153" y="30" width="69.5" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="ORX-Oj-phs"/>
+                                    <constraint firstAttribute="width" constant="70" id="udP-nU-DTv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.21387221586099348" blue="0.28215895912001621" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="3" translatesAutoresizingMaskIntoConstraints="NO" id="658-DM-8BT">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="2Lu-rn-EfS" firstAttribute="top" secondItem="658-DM-8BT" secondAttribute="bottom" id="S7o-Yw-nqd"/>
-                            <constraint firstAttribute="trailing" secondItem="658-DM-8BT" secondAttribute="trailing" id="Uo5-gq-LpH"/>
-                            <constraint firstItem="658-DM-8BT" firstAttribute="top" secondItem="6Wo-SC-DFS" secondAttribute="bottom" constant="-20" id="hgf-0T-Zd6"/>
-                            <constraint firstItem="658-DM-8BT" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="rTK-rh-djZ"/>
+                            <constraint firstItem="2Lu-rn-EfS" firstAttribute="top" secondItem="658-DM-8BT" secondAttribute="bottom" id="27k-HW-zBg"/>
+                            <constraint firstItem="LtE-Ey-egb" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="4OR-HI-7VR"/>
+                            <constraint firstItem="IoA-py-PV0" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="5l7-Xb-q3J"/>
+                            <constraint firstItem="2Lu-rn-EfS" firstAttribute="top" secondItem="IoA-py-PV0" secondAttribute="bottom" id="DcX-UE-r8M"/>
+                            <constraint firstItem="LtE-Ey-egb" firstAttribute="top" secondItem="6Wo-SC-DFS" secondAttribute="bottom" constant="10" id="RXq-Tn-lVq"/>
+                            <constraint firstItem="IoA-py-PV0" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="XKo-Du-hOk"/>
+                            <constraint firstAttribute="trailing" secondItem="658-DM-8BT" secondAttribute="trailing" id="Xka-uX-2Xd"/>
+                            <constraint firstItem="658-DM-8BT" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="gws-Wo-lgO"/>
+                            <constraint firstAttribute="trailing" secondItem="IoA-py-PV0" secondAttribute="trailing" id="rvi-F0-SCL"/>
+                            <constraint firstItem="658-DM-8BT" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="zxG-ZV-ugC"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="68" y="184"/>
         </scene>
     </scenes>
     <resources>
-        <image name="1" width="500" height="706"/>
+        <image name="3" width="500" height="500"/>
+        <image name="launch.png" width="1920" height="1200"/>
     </resources>
 </document>
